--- a/country/Belgium.html
+++ b/country/Belgium.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Argentina</title>
+    <title>Alexei's Postcrads - Belgium</title>
 
 
 </head>
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <!-- Вертикальное меню -->
                     
-                    <ul class="nav flex-column nav-pills">
+                    <ul class="nav flex-column">
                         <li class="nav-item"><a class="nav-link" href="./Argentina.html"><img src="./../flag/ar.png" alt="Argentina">Argentina</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Australia.html"><img src="./../flag/au.png" alt="Australia">Australia</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Austria.html"><img src="./../flag/at.png" alt="Austria">Austria</a></li>
@@ -102,33 +102,141 @@
                         <li class="nav-item"><a class="nav-link" href="./Ukraine.html"><img src="./../flag/ua.png" alt="Ukraine">Ukraine</a></li>
                         <li class="nav-item"><a class="nav-link" href="./United_Kingdom.html"><img src="./../flag/uk.png" alt="United Kingdom">United Kingdom</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Uzbekistan.html"><img src="./../flag/uz.png" alt="Uzbekistan">Uzbekistan</a></li>
-                    </ul>  
+                    </ul> 
                 </div>
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-         <h1>Argentina</h1>
-         <div class="row">
+           <h1>Belgium</h1>
+           <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-16623.jpg" data-caption="Postcard AR-16623">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-16623.jpg" alt="Postcard AR-16623">
-                    <div class="bottom-left">AR-16623</div>
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-208607.jpg" data-caption="Postcard BE-208607">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-208607.jpg" alt="Postcard BE-208607">
+                    <div class="bottom-left">BE-208607</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-21033.jpg" data-caption="Postcard AR-21033">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-21033.jpg" alt="Postcard AR-21033">
-                    <div class="bottom-left">AR-21033</div>
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-298402.jpg" data-caption="Postcard BE-298402">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-298402.jpg" alt="Postcard BE-298402">
+                    <div class="bottom-left">BE-298402</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-25613.jpg" data-caption="Postcard AR-25613">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-25613.jpg" alt="Postcard AR-25613">
-                    <div class="bottom-left">AR-25613</div>
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-329398.jpg" data-caption="Postcard BE-329398">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-329398.jpg" alt="Postcard BE-329398">
+                    <div class="bottom-left">BE-329398</div>
                 </a>
-            </div> 
-     </div>
- </div>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-392050.jpg" data-caption="Postcard BE-392050">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-392050.jpg" alt="Postcard BE-392050">
+                    <div class="bottom-left">BE-392050</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-443421.jpg" data-caption="Postcard BE-443421">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-443421.jpg" alt="Postcard BE-443421">
+                    <div class="bottom-left">BE-443421</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-446981.jpg" data-caption="Postcard BE-446981">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-446981.jpg" alt="Postcard BE-446981">
+                    <div class="bottom-left">BE-446981</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-453298.jpg" data-caption="Postcard BE-453298">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-453298.jpg" alt="Postcard BE-453298">
+                    <div class="bottom-left">BE-453298</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-468381.jpg" data-caption="Postcard BE-468381">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-468381.jpg" alt="Postcard BE-468381">
+                    <div class="bottom-left">BE-468381</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-474360.jpg" data-caption="Postcard BE-474360">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-474360.jpg" alt="Postcard BE-474360">
+                    <div class="bottom-left">BE-474360</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-476589.jpg" data-caption="Postcard BE-476589">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-476589.jpg" alt="Postcard BE-476589">
+                    <div class="bottom-left">BE-476589</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-493210.jpg" data-caption="Postcard BE-493210">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-493210.jpg" alt="Postcard BE-493210">
+                    <div class="bottom-left">BE-493210</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-494512.jpg" data-caption="Postcard BE-494512">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-494512.jpg" alt="Postcard BE-494512">
+                    <div class="bottom-left">BE-494512</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-521077.jpg" data-caption="Postcard BE-521077">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-521077.jpg" alt="Postcard BE-521077">
+                    <div class="bottom-left">BE-521077</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-553056.jpg" data-caption="Postcard BE-553056">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-553056.jpg" alt="Postcard BE-553056">
+                    <div class="bottom-left">BE-553056</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-557994.jpg" data-caption="Postcard BE-557994">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-557994.jpg" alt="Postcard BE-557994">
+                    <div class="bottom-left">BE-557994</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-557997.jpg" data-caption="Postcard BE-557997">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-557997.jpg" alt="Postcard BE-557997">
+                    <div class="bottom-left">BE-557997</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-562077.jpg" data-caption="Postcard BE-562077">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-562077.jpg" alt="Postcard BE-562077">
+                    <div class="bottom-left">BE-562077</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-566827.jpg" data-caption="Postcard BE-566827">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-566827.jpg" alt="Postcard BE-566827">
+                    <div class="bottom-left">BE-566827</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-568864.jpg" data-caption="Postcard BE-568864">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-568864.jpg" alt="Postcard BE-568864">
+                    <div class="bottom-left">BE-568864</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-582632.jpg" data-caption="Postcard BE-582632">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-582632.jpg" alt="Postcard BE-582632">
+                    <div class="bottom-left">BE-582632</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/belgium/BE-587075.jpg" data-caption="Postcard BE-587075">
+                    <img class="img-fluid w-100" src="./../collect/belgium/BE-587075.jpg" alt="Postcard BE-587075">
+                    <div class="bottom-left">BE-587075</div>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 
