--- a/country/Brazil.html
+++ b/country/Brazil.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Argentina</title>
+    <title>Alexei's Postcrads - Brazil</title>
 
 
 </head>
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <!-- Вертикальное меню -->
                     
-                    <ul class="nav flex-column nav-pills">
+                    <ul class="nav flex-column">
                         <li class="nav-item"><a class="nav-link" href="./Argentina.html"><img src="./../flag/ar.png" alt="Argentina">Argentina</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Australia.html"><img src="./../flag/au.png" alt="Australia">Australia</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Austria.html"><img src="./../flag/at.png" alt="Austria">Austria</a></li>
@@ -102,33 +102,93 @@
                         <li class="nav-item"><a class="nav-link" href="./Ukraine.html"><img src="./../flag/ua.png" alt="Ukraine">Ukraine</a></li>
                         <li class="nav-item"><a class="nav-link" href="./United_Kingdom.html"><img src="./../flag/uk.png" alt="United Kingdom">United Kingdom</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Uzbekistan.html"><img src="./../flag/uz.png" alt="Uzbekistan">Uzbekistan</a></li>
-                    </ul>  
+                    </ul> 
                 </div>
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-         <h1>Argentina</h1>
-         <div class="row">
+           <h1>Brazil</h1>
+           <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-16623.jpg" data-caption="Postcard AR-16623">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-16623.jpg" alt="Postcard AR-16623">
-                    <div class="bottom-left">AR-16623</div>
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-240963.jpg" data-caption="Postcard BR-240963">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-240963.jpg" alt="Postcard BR-240963">
+                    <div class="bottom-left">BR-240963</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-21033.jpg" data-caption="Postcard AR-21033">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-21033.jpg" alt="Postcard AR-21033">
-                    <div class="bottom-left">AR-21033</div>
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-245522.jpg" data-caption="Postcard BR-245522">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-245522.jpg" alt="Postcard BR-245522">
+                    <div class="bottom-left">BR-245522</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-25613.jpg" data-caption="Postcard AR-25613">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-25613.jpg" alt="Postcard AR-25613">
-                    <div class="bottom-left">AR-25613</div>
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-285905.jpg" data-caption="Postcard BR-285905">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-285905.jpg" alt="Postcard BR-285905">
+                    <div class="bottom-left">BR-285905</div>
                 </a>
-            </div> 
-     </div>
- </div>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-293681.jpg" data-caption="Postcard BR-293681">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-293681.jpg" alt="Postcard BR-293681">
+                    <div class="bottom-left">BR-293681</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-304255.jpg" data-caption="Postcard BR-304255">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-304255.jpg" alt="Postcard BR-304255">
+                    <div class="bottom-left">BR-304255</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-330588.jpg" data-caption="Postcard BR-330588">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-330588.jpg" alt="Postcard BR-330588">
+                    <div class="bottom-left">BR-330588</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-373955.jpg" data-caption="Postcard BR-373955">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-373955.jpg" alt="Postcard BR-373955">
+                    <div class="bottom-left">BR-373955</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-382507.jpg" data-caption="Postcard BR-382507">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-382507.jpg" alt="Postcard BR-382507">
+                    <div class="bottom-left">BR-382507</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-385097.jpg" data-caption="Postcard BR-385097">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-385097.jpg" alt="Postcard BR-385097">
+                    <div class="bottom-left">BR-385097</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-433478.jpg" data-caption="Postcard BR-433478">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-433478.jpg" alt="Postcard BR-433478">
+                    <div class="bottom-left">BR-433478</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-446707.jpg" data-caption="Postcard BR-446707">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-446707.jpg" alt="Postcard BR-446707">
+                    <div class="bottom-left">BR-446707</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-475661.jpg" data-caption="Postcard BR-475661">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-475661.jpg" alt="Postcard BR-475661">
+                    <div class="bottom-left">BR-475661</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/brazil/BR-476020.jpg" data-caption="Postcard BR-476020">
+                    <img class="img-fluid w-100" src="./../collect/brazil/BR-476020.jpg" alt="Postcard BR-476020">
+                    <div class="bottom-left">BR-476020</div>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 
