--- a/country/Canada.html
+++ b/country/Canada.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Argentina</title>
+    <title>Alexei's Postcrads - Canada</title>
 
 
 </head>
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <!-- Вертикальное меню -->
                     
-                    <ul class="nav flex-column nav-pills">
+                    <ul class="nav flex-column">
                         <li class="nav-item"><a class="nav-link" href="./Argentina.html"><img src="./../flag/ar.png" alt="Argentina">Argentina</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Australia.html"><img src="./../flag/au.png" alt="Australia">Australia</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Austria.html"><img src="./../flag/at.png" alt="Austria">Austria</a></li>
@@ -102,33 +102,178 @@
                         <li class="nav-item"><a class="nav-link" href="./Ukraine.html"><img src="./../flag/ua.png" alt="Ukraine">Ukraine</a></li>
                         <li class="nav-item"><a class="nav-link" href="./United_Kingdom.html"><img src="./../flag/uk.png" alt="United Kingdom">United Kingdom</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Uzbekistan.html"><img src="./../flag/uz.png" alt="Uzbekistan">Uzbekistan</a></li>
-                    </ul>  
+                    </ul> 
                 </div>
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-         <h1>Argentina</h1>
-         <div class="row">
+           <h1>Canada</h1>
+           <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-16623.jpg" data-caption="Postcard AR-16623">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-16623.jpg" alt="Postcard AR-16623">
-                    <div class="bottom-left">AR-16623</div>
+                <a data-fancybox="gallery" href="./../collect/canada/CA-193400.jpg" data-caption="Postcard CA-193400">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-193400.jpg" alt="Postcard CA-193400">
+                    <div class="bottom-left">CA-193400</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-21033.jpg" data-caption="Postcard AR-21033">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-21033.jpg" alt="Postcard AR-21033">
-                    <div class="bottom-left">AR-21033</div>
+                <a data-fancybox="gallery" href="./../collect/canada/CA-376830.jpg" data-caption="Postcard CA-376830">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-376830.jpg" alt="Postcard CA-376830">
+                    <div class="bottom-left">CA-376830</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-25613.jpg" data-caption="Postcard AR-25613">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-25613.jpg" alt="Postcard AR-25613">
-                    <div class="bottom-left">AR-25613</div>
+                <a data-fancybox="gallery" href="./../collect/canada/CA-454661.jpg" data-caption="Postcard CA-454661">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-454661.jpg" alt="Postcard CA-454661">
+                    <div class="bottom-left">CA-454661</div>
                 </a>
-            </div> 
-     </div>
- </div>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-478202.jpg" data-caption="Postcard CA-478202">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-478202.jpg" alt="Postcard CA-478202">
+                    <div class="bottom-left">CA-478202</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-493942.jpg" data-caption="Postcard CA-493942">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-493942.jpg" alt="Postcard CA-493942">
+                    <div class="bottom-left">CA-493942</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-495941.jpg" data-caption="Postcard CA-495941">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-495941.jpg" alt="Postcard CA-495941">
+                    <div class="bottom-left">CA-495941</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-509781.jpg" data-caption="Postcard CA-509781">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-509781.jpg" alt="Postcard CA-509781">
+                    <div class="bottom-left">CA-509781</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-540981.jpg" data-caption="Postcard CA-540981">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-540981.jpg" alt="Postcard CA-540981">
+                    <div class="bottom-left">CA-540981</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-580314.jpg" data-caption="Postcard CA-580314">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-580314.jpg" alt="Postcard CA-580314">
+                    <div class="bottom-left">CA-580314</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-588681.jpg" data-caption="Postcard CA-588681">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-588681.jpg" alt="Postcard CA-588681">
+                    <div class="bottom-left">CA-588681</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-618064.jpg" data-caption="Postcard CA-618064">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-618064.jpg" alt="Postcard CA-618064">
+                    <div class="bottom-left">CA-618064</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-647281.jpg" data-caption="Postcard CA-647281">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-647281.jpg" alt="Postcard CA-647281">
+                    <div class="bottom-left">CA-647281</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-689438.jpg" data-caption="Postcard CA-689438">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-689438.jpg" alt="Postcard CA-689438">
+                    <div class="bottom-left">CA-689438</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-689529.jpg" data-caption="Postcard CA-689529">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-689529.jpg" alt="Postcard CA-689529">
+                    <div class="bottom-left">CA-689529</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-698027.jpg" data-caption="Postcard CA-698027">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-698027.jpg" alt="Postcard CA-698027">
+                    <div class="bottom-left">CA-698027</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-723147.jpg" data-caption="Postcard CA-723147">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-723147.jpg" alt="Postcard CA-723147">
+                    <div class="bottom-left">CA-723147</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-775899.jpg" data-caption="Postcard CA-775899">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-775899.jpg" alt="Postcard CA-775899">
+                    <div class="bottom-left">CA-775899</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-792878.jpg" data-caption="Postcard CA-792878">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-792878.jpg" alt="Postcard CA-792878">
+                    <div class="bottom-left">CA-792878</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-803358.jpg" data-caption="Postcard CA-803358">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-803358.jpg" alt="Postcard CA-803358">
+                    <div class="bottom-left">CA-803358</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-812186.jpg" data-caption="Postcard CA-812186">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-812186.jpg" alt="Postcard CA-812186">
+                    <div class="bottom-left">CA-812186</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-822719.jpg" data-caption="Postcard CA-822719">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-822719.jpg" alt="Postcard CA-822719">
+                    <div class="bottom-left">CA-822719</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-824878.jpg" data-caption="Postcard CA-824878">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-824878.jpg" alt="Postcard CA-824878">
+                    <div class="bottom-left">CA-824878</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-827814.jpg" data-caption="Postcard CA-827814">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-827814.jpg" alt="Postcard CA-827814">
+                    <div class="bottom-left">CA-827814</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-854150.jpg" data-caption="Postcard CA-854150">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-854150.jpg" alt="Postcard CA-854150">
+                    <div class="bottom-left">CA-854150</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-854484.jpg" data-caption="Postcard CA-854484">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-854484.jpg" alt="Postcard CA-854484">
+                    <div class="bottom-left">CA-854484</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-895572.jpg" data-caption="Postcard CA-895572">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-895572.jpg" alt="Postcard CA-895572">
+                    <div class="bottom-left">CA-895572</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/canada/CA-904233.jpg" data-caption="Postcard CA-904233">
+                    <img class="img-fluid w-100" src="./../collect/canada/CA-904233.jpg" alt="Postcard CA-904233">
+                    <div class="bottom-left">CA-904233</div>
+                </a>
+            </div>
+
+        </div>
+    </div>
 </div>
 </div>
 
