--- a/country/Croatia.html
+++ b/country/Croatia.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Argentina</title>
+    <title>Alexei's Postcrads - Croatia</title>
 
 
 </head>
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <!-- Вертикальное меню -->
                     
-                    <ul class="nav flex-column nav-pills">
+                    <ul class="nav flex-column">
                         <li class="nav-item"><a class="nav-link" href="./Argentina.html"><img src="./../flag/ar.png" alt="Argentina">Argentina</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Australia.html"><img src="./../flag/au.png" alt="Australia">Australia</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Austria.html"><img src="./../flag/at.png" alt="Austria">Austria</a></li>
@@ -102,33 +102,27 @@
                         <li class="nav-item"><a class="nav-link" href="./Ukraine.html"><img src="./../flag/ua.png" alt="Ukraine">Ukraine</a></li>
                         <li class="nav-item"><a class="nav-link" href="./United_Kingdom.html"><img src="./../flag/uk.png" alt="United Kingdom">United Kingdom</a></li>
                         <li class="nav-item"><a class="nav-link" href="./Uzbekistan.html"><img src="./../flag/uz.png" alt="Uzbekistan">Uzbekistan</a></li>
-                    </ul>  
+                    </ul> 
                 </div>
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-         <h1>Argentina</h1>
-         <div class="row">
+           <h1>Croatia</h1>
+           <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-16623.jpg" data-caption="Postcard AR-16623">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-16623.jpg" alt="Postcard AR-16623">
-                    <div class="bottom-left">AR-16623</div>
+                <a data-fancybox="gallery" href="./../collect/croatia/HR-22226.jpg" data-caption="Postcard HR-22226">
+                    <img class="img-fluid w-100" src="./../collect/croatia/HR-22226.jpg" alt="Postcard HR-22226">
+                    <div class="bottom-left">HR-22226</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-21033.jpg" data-caption="Postcard AR-21033">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-21033.jpg" alt="Postcard AR-21033">
-                    <div class="bottom-left">AR-21033</div>
+                <a data-fancybox="gallery" href="./../collect/croatia/HR-60196.jpg" data-caption="Postcard HR-60196">
+                    <img class="img-fluid w-100" src="./../collect/croatia/HR-60196.jpg" alt="Postcard HR-60196">
+                    <div class="bottom-left">HR-60196</div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-25613.jpg" data-caption="Postcard AR-25613">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-25613.jpg" alt="Postcard AR-25613">
-                    <div class="bottom-left">AR-25613</div>
-                </a>
-            </div> 
-     </div>
- </div>
+        </div>
+    </div>
 </div>
 </div>
 
